--- a/requirements.txt
+++ b/requirements.txt
@@ -28,3 +28,9 @@ langchain_core
 
 # Biblioteca para carregar variáveis de ambiente
 python-dotenv
+
+# FPDF para gerar PDFs
+fpdf==1.7.2  # Versão estável mais recente
+
+#Markdown para conversão no PDF
+markdown==3.7
